Added simple HUD class for cargo collection mode

--- a/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj
+++ b/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj
@@ -34,6 +34,7 @@
     <ClInclude Include="include\GameState.h" />
     <ClInclude Include="include\GUIButton.h" />
     <ClInclude Include="include\HelpScreen.h" />
+    <ClInclude Include="include\HUD.h" />
     <ClInclude Include="include\LevelLoader.h" />
     <ClInclude Include="include\MathUtility.h" />
     <ClInclude Include="include\MenuScreen.h" />
@@ -59,6 +60,7 @@
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GUIButton.cpp" />
     <ClCompile Include="src\HelpScreen.cpp" />
+    <ClCompile Include="src\HUD.cpp" />
     <ClCompile Include="src\LevelLoader.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MathUtility.cpp" />
