Added AI tank view blocking and nicer looking vision cone

--- a/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj
+++ b/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj
@@ -43,6 +43,7 @@
     <ClInclude Include="include\PlayerJoinScreen.h" />
     <ClInclude Include="include\Projectile.h" />
     <ClInclude Include="include\ProjectilePool.h" />
+    <ClInclude Include="include\Raycast.h" />
     <ClInclude Include="include\RoundStatsSaver.h" />
     <ClInclude Include="include\ScreenSize.h" />
     <ClInclude Include="include\Tank.h" />
@@ -70,6 +71,7 @@
     <ClCompile Include="src\PlayerJoinScreen.cpp" />
     <ClCompile Include="src\Projectile.cpp" />
     <ClCompile Include="src\ProjectilePool.cpp" />
+    <ClCompile Include="src\Raycast.cpp" />
     <ClCompile Include="src\RoundStatsSaver.cpp" />
     <ClCompile Include="src\Tank.cpp" />
     <ClCompile Include="src\TankAI.cpp" />
